--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "micro-front-end-one": "^0.8.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
@@ -30,5 +29,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "peerDependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "redux": "^4.0.5",
+    "react-redux": "^7.2.0"
   }
 }
