--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "micro-front-end-one": "^0.8.0",
+    "micro-front-end-one": "^0.15.0",
+    "micro-front-end-two": "^0.4.0",
+    "redux": "^4.0.5",
+    "react-redux": "^7.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
@@ -35,8 +38,6 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "redux": "^4.0.5",
-    "react-redux": "^7.2.0"
+    "@babel/cli": "^7.8.4"
   }
 }
